Fix horizontal scrollbar appearing because of section line image in footer

--- a/css/globals.css
+++ b/css/globals.css
@@ -948,8 +948,7 @@ body {
 
 .vector-41 {
   height: 2px;
-  margin-right: 2.0px;
-  margin-top: -1px;
+  width: 100%;
 }
 
 .meliteh-all-right-reserved {
